fix: removed horizontal scroll from webpage

--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,7 @@
 
 html, body, article, header{
   width: 100%;
+  margin:0;
 }
 
 body{
